chore: interim fix for response schema

--- a/rasa/shared/nlu/training_data/schemas/responses.yml
+++ b/rasa/shared/nlu/training_data/schemas/responses.yml
@@ -30,3 +30,7 @@ schema;responses:
                   type: "str"
           channel:
             type: "str"
+          language:
+            type: "str"
+          metadata:
+            type: "any"
