--- a/rasa/shared/nlu/training_data/schemas/responses.yml
+++ b/rasa/shared/nlu/training_data/schemas/responses.yml
@@ -29,6 +29,24 @@ schema;responses:
                   type: "str"
                 payload:
                   type: "str"
+          quick_replies:
+            type: "seq"
+            sequence:
+            - type: "map"
+              allowempty: True
+              mapping:
+                title:
+                  type: "str"
+                payload:
+                  type: "str"
+          attachment:
+            type: "map"
+            allowempty: True
+          elements:
+            type: "seq"
+            sequence:
+            - type: "map"
+              allowempty: True
           channel:
             type: "str"
           language:
